handle copy button functionality

--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
                     <p class="fieldset-legend">Lo prometido es deuda</p>
                     <div class="success-wrapper">
                         <div class="code-wrapper">
-                            <span class="code">8HOPO</span>
+                            <div class="code-and-message">
+                                <span class="code">8HOPO</span>
+                                <span class="code-copied-message">Código copiado al portapapeles</span>
+                            </div>                            
                             <button class="button-copy-code">Copiar</button>
                         </div>
                         <p class="secondary-copy inconsolata">Introduce este código en tu próxima compra para conseguir tu premio. ¡Disponible durante 20 minutos!</p>
