Add countdown functionality

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>                            
                             <button class="button-copy-code">Copiar</button>
                         </div>
-                        <p class="secondary-copy inconsolata">Introduce este código en tu próxima compra para conseguir tu premio. ¡Disponible durante 20 minutos!</p>
+                        <p class="secondary-copy inconsolata">Introduce este código en tu próxima compra para conseguir tu premio. ¡Disponible durante <span class="countdown-time">20</span> minutos!</p>
                         <div class="countdown-wrapper">
                             <span class="material-icons">alarm</span>
                             <p class="remaining-time">20:00</p>
