Add reboot button functionallity

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="countdown-wrapper">
                             <span class="material-icons">alarm</span>
                             <p class="remaining-time">20:00</p>
-                            <p class="expired-message">Código caducado. <span class="reboot">Reiniciar</span>.</p>
+                            <p class="expired-message">Código caducado. <button class="reboot-button">Reiniciar</button>.</p>
                         </div>
                         <a class="green-button" href="https://www.siroko.com/"><span class="button-copy">Ir a siroko.com</span><span class="button-icon material-icons">arrow_right_alt</span></a>
                     </div>
@@ -130,7 +130,7 @@
     <footer class="footer inconsolata">
         <div class="footer-content">
             <p>2016-2021 Siroko Solutions S.L.</p>
-            <p>Todos los derechos reservados. <a href="#">Ver bases.</a></p>
+            <p>Todos los derechos reservados. <a href="#">Ver bases</a>.</p>
         </div>        
     </footer>
 </body>
